<?xml version="1.0"?>
<package>
  <name>hero_msgs</name>
  <version>0.0.0</version>
  <description>The hero_msgs package</description>

  <maintainer email="robotjuhwan@gmail.com">jk</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

   
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>
